==> tanyigergo/Profibus_DP_slave/vpc3.c <==
#include "stm32f10x.h"                  // Device header
#include "vpc3.h"
#include "delay.h"
#include "periph_init.h"
#include "test.h"

void Vpc3Write(VPC3_ADR wAddress, uint8_t bData )
{
	
	
   //16 bit address into 2 bytes
	uint8_t upperByte = (uint8_t)(wAddress >> 8);
	uint8_t lowerByte = (uint8_t)wAddress;
	//Variable to return 
	uint8_t spiRxBuffer;
	
	DpAppl_DisableInterruptVPC3Channel1();
	
	/*NSS pin = LOW*/
	SET_NSS_LOW;
	DelayUs(10);
	
	
	/*Send slave the read instruction, 0001 0011*/
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = WRITE_BYTE;
	
	
	/*Send 16 bit address of slave memory cell*/	
			//1. Upper byte address
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = upperByte;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	spiRxBuffer = SPI1->DR;
	
			//2. Lower byte address
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = lowerByte;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	spiRxBuffer = SPI1->DR;
	
	/*Send data byte*/
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = bData;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	spiRxBuffer = SPI1->DR;
	
	
	/*Wait while the SPI interface is busy*/
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) == SET);		
	
	spiRxBuffer = SPI1->DR;
	
	DelayUs(10);
	
	/*NSS pin high*/
	SET_NSS_HIGH;
	
	DelayUs(10);
	DpAppl_EnableInterruptVPC3Channel1();
	
}

uint8_t Vpc3Read( VPC3_ADR wAddress )
{
	
	
	
   //16 bit address into 2 bytes
	uint8_t upperByte = (uint8_t)(wAddress >> 8);
	uint8_t lowerByte = (uint8_t)wAddress;
	
	//Variable to return 
	uint8_t spiRxBuffer;
		
	DpAppl_DisableInterruptVPC3Channel1();
	
	/*NSS pin = LOW*/
	SET_NSS_LOW;
	
	
	
	/*Send slave the read instruction, 0001 0011*/
	SPI1->DR = READ_BYTE;
	
	
	/*Send 16 bit address of slave memory cell*/	
		//1. Upper byte address
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = upperByte;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	spiRxBuffer = SPI1->DR;
		
		//2. Lower byte address
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = lowerByte;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	spiRxBuffer = SPI1->DR;
	
	/*Send dummy byte*/
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = 0x00;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	spiRxBuffer = SPI1->DR;
	
//	/*Send dummy byte*/
//	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
//	SPI1->DR = 0x00;
//	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
//	spiRxBuffer = SPI1->DR;
	
	/*Wait while the SPI interface is busy*/
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) == SET);	

/*Read the received data*/
	spiRxBuffer = SPI1->DR;


	
/*NSS pin high*/
	SET_NSS_HIGH;
	
	DpAppl_EnableInterruptVPC3Channel1();
	
	return spiRxBuffer;
  
	
	
}

void Vpc3MemSet( VPC3_ADR wAddress, uint8_t bValue, uint16_t wLength )
{
   /** @todo Add your own code here! */
	uint8_t upperByte = (uint8_t)(wAddress >> 8);
	uint8_t lowerByte = (uint8_t)wAddress;
	uint16_t i;
	uint8_t spiRxBuffer;
	
	DpAppl_DisableInterruptVPC3Channel1();
	
	/*NSS pin = LOW*/
	SET_NSS_LOW;
	
		
	
	/*Send slave the read instruction, 0001 0011*/
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = WRITE_ARRAY;
	
	
	/*Send 16 bit address of slave memory cell*/	
			//1. Upper byte address
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = upperByte;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	spiRxBuffer = SPI1->DR;
	
			//2. Lower byte address
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = lowerByte;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	spiRxBuffer = SPI1->DR;
	
	/*Send data byte*/
	for(i = 0; i <wLength; i++){
		while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
		SPI1->DR = bValue;
		while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	spiRxBuffer = SPI1->DR;
	}
	
	
	/*Wait while the SPI interface is busy*/
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) == SET);		
	spiRxBuffer = SPI1->DR;
	
	
	/*NSS pin high*/
	SET_NSS_HIGH;
	
	DpAppl_EnableInterruptVPC3Channel1();
}

void CopyFromVpc3( MEM_UNSIGNED8_PTR pLocalMemory, VPC3_UNSIGNED8_PTR pToVpc3Memory, uint16_t wLength)
{
	uint16_t wAddress = (VPC3_ADR)pToVpc3Memory;
	uint8_t upperByte = (uint8_t)(wAddress >> 8);
	uint8_t lowerByte = (uint8_t)wAddress;
	
	DpAppl_DisableInterruptVPC3Channel1();
	int i;
	
	
	
	SET_NSS_LOW;
	
	/*Send slave the read instruction, 0001 0011*/
	SPI1->DR = READ_ARRAY;
	
	
	/*Send 16 bit address of slave memory cell*/	
		//1. Upper byte address
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = upperByte;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	pLocalMemory[0]  = SPI1->DR;
		
	//2. Lower byte address
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = lowerByte;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	pLocalMemory[0]  = SPI1->DR;
	
	/*Send dummy byte*/
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = 0x00;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	pLocalMemory[0]  = SPI1->DR;
	
	for(i = 0; i < wLength-1; i++){
		
	/*Send dummy byte*/
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = 0x00;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	pLocalMemory[i]  = SPI1->DR;
		
	}
	
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	pLocalMemory[wLength-1]  = SPI1->DR;

	/*NSS pin high*/
	SET_NSS_HIGH;
	
	
	
	
	
	
  
	/** @todo Add your own code here! */
}

void CopyToVpc3(VPC3_UNSIGNED8_PTR pToVpc3Memory, MEM_UNSIGNED8_PTR pLocalMemory, uint16_t wLength)
{
   /** @todo Add your own code here! */
	
	
	uint16_t wAddress = (VPC3_ADR)pToVpc3Memory;
	uint8_t upperByte = (uint8_t)(wAddress >> 8);
	uint8_t lowerByte = (uint8_t)wAddress;
	uint16_t i;
	uint8_t spiRxBuffer;
	
	DpAppl_DisableInterruptVPC3Channel1();
	
	/*NSS pin = LOW*/
	SET_NSS_LOW;
	
	
	/*Send slave the read instruction, 0001 0011*/
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = WRITE_ARRAY;
	
	
	/*Send 16 bit address of slave memory cell*/	
			//1. Upper byte address
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = upperByte;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	spiRxBuffer = SPI1->DR;
	
			//2. Lower byte address
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
	SPI1->DR = lowerByte;
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
	spiRxBuffer = SPI1->DR;
	
	/*Send data byte*/
	for(i = 0; i <wLength; i++){
		while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);
		SPI1->DR = pLocalMemory[i];
		while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);
		spiRxBuffer = SPI1->DR;
	}
	
	
	/*Wait while the SPI interface is busy*/
	while (SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_BSY) == SET);		
	spiRxBuffer = SPI1->DR;
	
	
	/*NSS pin high*/
	SET_NSS_HIGH;
	
	DpAppl_EnableInterruptVPC3Channel1();
	

}
